--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
     max-width: 110rem;
     padding: 0 2rem;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 #PageOne {
